--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
   pointer-events: none;    /* se quiser que clique passe por baixo */
   border-radius: inherit;  /* opcional, herda borda do card */
   transition: opacity 0.3s ease;
+  display: none;
 }
 
 .video-title {
@@ -148,8 +149,12 @@
   cursor: pointer;
   font-weight: bold;
   transition: background-color 0.3s ease;
+  pointer-events: none;
 }
-
+.video-card:hover .play-button {
+  opacity: 1;
+  pointer-events: auto; /* reativa clique quando visível */
+}
 .play-button:hover {
   background-color: #4752c4;
 }
