--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   <style>
 .logo-login {
   position: absolute;
-  top: 0;
-  left: 26px;
+  top: 10px; 
+  left: 10px;
   width: 200px; /* ou outro tamanho que desejar */
   height: auto;
   z-index: 10;
 }
 .logo-superior-esquerda {
   position: absolute;
-  top: 0;
-  left: 26px;
+  top: 10px; 
+  left: 10px;
   width: 200px; /* ou outro tamanho que desejar */
   height: auto;
   z-index: 10;
@@ -753,7 +753,7 @@ position: relative;
 
 <!-- Login -->
 <div id="login-container" style="display: none;">
-  <img src="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-14_21-36-27-382.png" alt="Logo" class="logo-login">
+  <img src="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-15_22-26-46-902.png" alt="Logo" class="logo-login">
 
   <h2>Login</h2>
 
@@ -769,7 +769,7 @@ position: relative;
 
 <!-- Registro -->
 <div id="register-container" style="display: none;">
-<img src="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-14_21-36-27-382.png" alt="Logo" class="logo-superior-esquerda">
+<img src="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-15_22-26-46-902.png" alt="Logo" class="logo-superior-esquerda">
 
   <h2>Registrar</h2>
   <input type="email" id="register-email" placeholder="Email" />
