--- a/index.html
+++ b/index.html
@@ -1743,7 +1743,7 @@ if (msg.respostaDe) {
 
   const mensagemOriginal = msg.respostaDe.text || "(mensagem não encontrada)";
 
-  textoResp.innerHTML = `${nomeRespHtml} ${mensagemOriginal}`;
+  textoResp.innerHTML = `@${nomeRespHtml} ${mensagemOriginal}`;
   textoResp.style.fontSize = "0.75rem";
   textoResp.style.color = "#aaa";
   textoResp.style.opacity = "0.8";
