--- a/index.html
+++ b/index.html
@@ -1732,7 +1732,7 @@ if (
     let nomeExibido = msg.nome || msg.email;
 
 if (msg.email === "zeuszeuz007@gmail.com") {
-nomeExibido = `<strong class="nome-zeus">${msg.nome}</strong> <span class="coroa-brilhante">👑</span>`;
+nomeExibido = `<strong class="nome-zeus">${msg.nome}</strong> <span class="coroa-brilhante">🍿</span>`;
 } else {
   nomeExibido = `<strong style="color:#5865f2">${msg.nome}</strong>`;
 }
