--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30 (1).webp">
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.png.webp">
   <style>
+#chat-box {
+  background-image: url('https://i.pinimg.com/1200x/f5/4d/3d/f54d3d1c4cf257077643b0275290c8fc.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+background-color: rgba(0,0,0,0.6);
+background-blend-mode: overlay;
+}
 .nome-zeus {
   font-weight: bold;
   font-size: 0.9rem;
@@ -936,6 +944,11 @@ position: relative;
   z-index: 99999;
   overflow: hidden;
   box-shadow: 0 0 12px black;
+
+  background-image: url('https://i.pinimg.com/1200x/f5/4d/3d/f54d3d1c4cf257077643b0275290c8fc.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 ">
   <!-- Botão de fechar -->
   <div id="chat-fechar" style="
