--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Patounic Watch, 0.0v </title>
+  <title>Patounic Watch: 0v</title>
   <link rel="icon" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-12_08-46-28-463.png" />
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30 (1).webp">
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.png.webp">
@@ -945,7 +945,7 @@ position: relative;
   overflow: hidden;
   box-shadow: 0 0 12px black;
 
-  background-image: url('https://i.pinimg.com/736x/c2/5b/f4/c25bf41f03eda4db8107517099ad5046.jpg');
+  background-image: url('https://i.pinimg.com/736x/20/ca/ed/20caed8b61b6a91206e63cba9fdbe36f.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
